[package]
name = "pegtx"
version = "0.1.0"
authors = ["Mitchell <17392435+MitchellBerry@users.noreply.github.com>"]
edition = "2018"

[dependencies]
pegnetd =  { version="0.1.2" }
structopt = "0.3.5"
rust_decimal = "1.0.3"
csv = "1.1.1"
serde = { version = "1.0.102", features = ["derive"] }
indicatif = "0.13.0"
