[package]
name = "pegtx"
version = "0.1.1"
authors = ["Mitchell <17392435+MitchellBerry@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/kompendium-llc/pegtx"
homepage = "https://github.com/kompendium-llc/pegtx"

description = "An accounting tool for use with pegnet"

[dependencies]
pegnetd =  { version="0.1.2" }
structopt = "0.3.5"
rust_decimal = "1.0.3"
csv = "1.1.1"
serde = { version = "1.0.102", features = ["derive"] }
indicatif = "0.13.0"
